# wallup

app/: .gitignore  index.html  package.json
app/src/: App.tsx
app/src/components/: ColorInputList.tsx  ColorMind.tsx  ColorRegion.tsx  FileInput.tsx  ImagePreview.tsx  WallupTitle.tsx
app/src/hooks/: useColorList.ts  useColorMind.ts  useFileInput.tsx  useRecolor.ts
server/: .env.example  .gitignore  README.md  config.py  constants.py  main.py  pyproject.toml
server/routers/: images.py
server/services/: colorizer.py  segmentation.py
